fix: prevent layout shift
- occurred with markdown/formula rendering
- prevented by setting  position: fixed` on body

--- a/src/chat/style.less
+++ b/src/chat/style.less
@@ -2,4 +2,5 @@ body {
   overflow: hidden;
   height: 100lvh;
   width: 100lvw;
+  position: fixed;
 }
